# FuzzySeven

./: Dockerfile  docker-compose.yml  pyproject.toml
fuzzy/: __init__.py  __main__.py  config.py  constants.py
fuzzy/discord/: __init__.py  bot.py
fuzzy/discord/addons/: __init__.py  error.py  presence.py  ready.py
fuzzy/discord/extensions/: hub.py
fuzzy/utils/: chron.py  string.py
