[tool.poetry]
name = "fuzzy-bot"
version = "7.0.0-alpha.1"
description = "The iron-booted robotic resident of The Tsunami Zone"

license = "GPL-3.0"
repository = "https://github.com/parafoxia/FuzzySeven"
readme = "README.md"

authors = [
    "Ethan Henderson <ethan.henderson.1998@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"
aiosqlite = "^0.16.0"
APScheduler = "^3.6.3"
"discord.py" = "^1.5.1"
psutil = "^5.8.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
